Fix crash on importing a broken icc profile

BUG:434273
(cherry picked from commit 7d9f366a2316fec7ee5d6896484408c49d9743e1)